[project]
name = "content-moderation-env"
version = "0.1.0"
description = "OpenEnv content moderation environment"
authors = [{ name = "Vinayak Shukla" }]

dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"